plugins {
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'java' 
}

group = 'com.JavaFxAPPS'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':backend')
    implementation 'org.openjfx:javafx-controls:17'
    implementation 'org.openjfx:javafx-fxml:17'
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'io.github.palexdev:materialfx:11.16.1'
    implementation 'org.json:json:20240303'
}

javafx {
    version = '17'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

springBoot {
    mainClass = 'com.JavaFxAPPS.JavaFxApplication'
}

bootRun {
    jvmArgs = [
            "--module-path", System.getenv("PATH_TO_FX") ?: "C:/Users/m.alsaif/Desktop/javafx-sdk-17.0.15/lib",
            "--add-modules", "javafx.controls,javafx.fxml"
    ]
}
